--- a/main.html
+++ b/main.html
@@ -10,8 +10,8 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-<nav> 3 random audios
-<ul>
+<nav> 
+<ul>3 random audios
 	<a href ="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3"><li>URL 1</li></a>
 	<a href = "http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg"><li>URL 2</li></a>
 	<a href = "http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3"><li>URL 3</li></a>
