--- a/main.html
+++ b/main.html
@@ -10,12 +10,22 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-<nav> 
-<ul>3 random audios
-	<a href ="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3"><li>URL 1</li></a>
-	<a href = "http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg"><li>URL 2</li></a>
-	<a href = "http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3"><li>URL 3</li></a>
-</ul></nav>
+<nav>
+		<ul>
+			<li><a href="https://eloquentjavascript.net/">1</a></li>
+			<li><a href="https://www.w3schools.com/tags/att_scope.asp">2</a></li>
+			<li><a href="https://microsoftedge.microsoft.com/addons/detail/bookmark-llama-shared-b/ipnohflnkaljegnpiepbfefnnodmgkmp">3</a></li>
+		</ul>
+	</nav>
+	<h2>3 random audios</h2>
+	<audio controls src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3">
+		<source src=" http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mpeg">
+	</audio>
+    <audio controls src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg"><source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
+    </audio>
+    <audio controls src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3"><source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mpeg">
+    </audio>
+        
 </body>
 
 </html>
